--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- <title>React App</title> -->
+    <title>Login Page - Product Admin Template</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700"
+    />
+    <!-- https://fonts.google.com/specimen/Open+Sans -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/fontawesome.min.css" />
+    <!-- https://fontawesome.com/ -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+    <!-- https://getbootstrap.com/ -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/templatemo-style.css">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <!-- <script src="js/jquery-3.3.1.min.js"></script> -->
+    <!-- https://jquery.com/download/ -->
+    <!-- <script src="js/bootstrap.min.js"></script> -->
+    <!-- https://getbootstrap.com/ -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
